--- a/exercicios/exercicios/ex022/fundo004.html
+++ b/exercicios/exercicios/ex022/fundo004.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+    <title>Posicionamento</title>
+</head>  
+     <style>
+         body {
+             height: 98vh;
+             background-image: url("https://gustavoguanabara.github.io/html-css/imagens/mascote.png");
+             background-size: 100px;
+             background-repeat:no-repeat ;
+             background-position: center center;
+         }
+     </style>
 <body>
     
 </body>
