--- a/exercicios/exercicios/ex022/fundo006.html
+++ b/exercicios/exercicios/ex022/fundo006.html
@@ -4,15 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body {
             height: 100vh;
             background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center center;
-            background-repeat: repeat-y;
+            background-repeat:  no-repeat;
             background-size: cover;
+            background-attachment: fixed;
+            /*Shorthand -backgraound 
+            color > image > position > repeat > [size] não funciona com ele na shorthand > attachment
+            */
         }
         main {
             background-color: white;
