--- a/exercicios/desafios/desafio012/index.html
+++ b/exercicios/desafios/desafio012/index.html
@@ -28,7 +28,7 @@
           
 
 
-        <section class="imagem">
+        <section class="imagem" id="img01">
             <p>
                 Não é mais como era antes<br>
                 É tudo abreviado<br>
@@ -63,7 +63,7 @@
         </section >
 
 
-        <section class="imagem">
+        <section class="imagem" id="img02">
             <p>
                 Tenho saudade das cartas<br>
                 Escritas com a própria mão<br>
@@ -97,7 +97,7 @@
             </p>
         </section>
         <footer>
-            <p>Site criado por<a href="https://gustavoguanabara.github.io" target="_blank"> Gustavo Guanabara</a> para o <a href="https://www.cursoemvideo.com" target="_blank">Cursoemvideo</a></p>
+            <p>Site criado por<a href="https://github.com/Arleypedroso" target="_blank"> Arley pedroso</a> para o <a href="https://www.cursoemvideo.com" target="_blank">Cursoemvideo</a></p>
         </footer>
     
 </body>
